Chap11/tomcat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      project: devops-with-kubernetes
      app: tomcat
  template:
    metadata:
      labels:
        project: devops-with-kubernetes
        app: tomcat
    spec:
      containers:
        - image: tomcat
          name: tomcat
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  ports:
    - protocol: TCP
      port: 8080
  type: NodePort
  selector:
      project: devops-with-kubernetes
      app: tomcat
